--- a/findfriends.html
+++ b/findfriends.html
@@ -10,10 +10,10 @@
     <style type="text/css">
       /* Set the size of the div element that contains the map */
       #map {
-        height: 400px;
+        height: 1500px;
         /* The height is 400 pixels */
-        width: 100%;
         /* The width is the width of the web page */
+        padding: 10px;
       }
 	</style>
   </head>
