--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ section{
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="message.html">Messaging</a>
+                                        <a href="settings.html">Settings</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="leaderboard.html">Leaderboard</a>
@@ -501,52 +501,28 @@ section{
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">ATM<i class="fas fa-caret-down"></i></a>
-                            <div class="dropdown">
-                                <ul>
-                                    <li class="dropdown-link">
-                                        <a href="atm.html">all</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">by name</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">near me</a>
-                                    </li>
-                                    <div class="arrow"></div>
-                                </ul>
-                            </div>
+                            <a href="message.html">SWEET TEA<i class="fas fa-caret-down"></i></a>
+                        
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="#">Cafes<i class="fas fa-caret-down"></i></a>
+                            <a href="#">SWEETVENTURE<i class="fas fa-caret-down"></i></a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="cafe.html">all</a>
+                                        <a href="np_challenge.html">TEAM NGEE ANN</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#">brands</a>
+                                        <a href="#">TEAM SP</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#">near me</a>
+                                        <a href="#">TEAM BUKIT PANJANG</a>
                                     </li>
                                     <div class="arrow"></div>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.6s">
-                            <a href="#">Study Spots<i class="fas fa-caret-down"></i></a>
-                            <div class="dropdown">
-                                <ul>
-                                    <li class="dropdown-link">
-                                        <a href="study.html">all</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">near me</a>
-                                    </li>
-                                    <div class="arrow"></div>
-                                </ul>
-                            </div>
+                            <a href="scoreboard.html">LEADER-BOARD<i class="fas fa-caret-down"></i></a>
                         </li>
                     </ul>
                 </div>
