--- a/np_challenge.html
+++ b/np_challenge.html
@@ -1,54 +1,141 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    <title>Find Friend Map</title>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NP Challenge Map</title>
-    <link rel= "stylesheet" href= "https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>NP race </title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
     crossorigin="anonymous">
+    <link rel="stylesheet" href="teststyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link rel = "stylesheet" href="teststyle.css" >
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArVX2Pdi9UKawedXyJ8UBAJxU7QPCFFxw&callback=initMap&libraries=&v=weekly"
       defer
     ></script>
-  </head>
-  <style> 
-  html{
-      height: 100%;
-      font-family:  "Roboto Condensed", "sans-serif";
-  }
-  body{
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  /* Set the size of the div element that contains the map */
-  #map {
-        height: 1500px;
+    <link rel="stylesheet" href="teststyle.css">
+	
+    <style type="text/css">
+      /* Set the size of the div element that contains the map */
+      #map {
+        height: 615px;
         /* The height is 400 pixels */
-        width: 100%;
         /* The width is the width of the web page */
+        padding: 10px;
       }
-</style>
-  <body> 
-    <div id="map"></div>
-    <div class="stopwatch-container">
-        <div id="display">
-            00:00:00
+
+	</style>
+  </head>
+  <body>
+
+    <body>
+      <header>
+          <div class="container">
+              <input type="checkbox" name="" id="check">
+              
+              <div class="logo-container">
+                  <h3 class="logo">GO<span>Sweet</span></h3>
+              </div>
+  
+              <div class="nav-btn">
+                  <div class="nav-links">
+                      <ul>
+                          <li class="nav-link" style="--i: .6s">
+                              <a href="index.html">Home</a>
+                              <div class="dropdown">
+                                  <ul>
+                                      <li class="dropdown-link">
+                                          <a href="settings.html">Settings</a>
+                                      </li>
+                                      <li class="dropdown-link">
+                                          <a href="leaderboard.html">Leaderboard</a>
+                                      </li>
+                                      <div class="arrow"></div>
+                                  </ul>
+                              </div>
+                          </li>
+                          <li class="nav-link" style="--i: .85s">
+                              <a href="#">Bubble Tea<i class="fas fa-caret-down"></i></a>
+                              <div class="dropdown">
+                                  <ul>
+                                      <li class="dropdown-link">
+                                          <a href="bubbletea.html">all</a>
+                                      </li>
+                                      <li class="dropdown-link">
+                                          <a href="#">brands</a>
+                                      </li>
+                                      <li class="dropdown-link">
+                                          <a href="#">near me</a>
+                                      </li>
+                                      <div class="arrow"></div>
+                                  </ul>
+                              </div>
+                          </li>
+                          <li class="nav-link" style="--i: 1.1s">
+                              <a href="message.html">SWEET TEA<i class="fas fa-caret-down"></i></a>
+                          
+                          </li>
+                          <li class="nav-link" style="--i: 1.35s">
+                              <a href="#">SWEETVENTURE<i class="fas fa-caret-down"></i></a>
+                              <div class="dropdown">
+                                  <ul>
+                                      <li class="dropdown-link">
+                                          <a href="np_challenge.html">TEAM NGEE ANN</a>
+                                      </li>
+                                      <li class="dropdown-link">
+                                          <a href="#">TEAM SP</a>
+                                      </li>
+                                      <li class="dropdown-link">
+                                          <a href="#">TEAM BUKIT PANJANG</a>
+                                      </li>
+                                      <div class="arrow"></div>
+                                  </ul>
+                              </div>
+                          </li>
+                          <li class="nav-link" style="--i: 1.6s">
+                              <a href="scoreboard.html">LEADER-BOARD<i class="fas fa-caret-down"></i></a>
+                          </li>
+                      </ul>
+                  </div>
+  
+                  <div class="log-sign" style="--i: 1.8s">
+                      <a href="login.html" class="btn transparent">Log in</a>
+                  </div>
+              </div>
+  
+              <div class="hamburger-menu-container">
+                  <div class="hamburger-menu">
+                      <div></div>
+                  </div>
+              </div>
+          </div>
+      </header>
+      <main class="animate__animated animate__slideInLeft">
+        <div id="map"></div>
+        <div class="stopwatch-container">
+            <div id="display">
+              00:00:00
+          </div>
+          <div class="stopwatch-buttons">
+                <button id="startStop" onclick="startStop()"><i class="fa fa-play-circle-o" aria-hidden="true"></i></button>
+                <button id="startStop" onclick="reset()"><i class="fa fa-stop-circle-o" aria-hidden="true"></i></button>
+            </div>
         </div>
-
-        <div class="stopwatch-buttons">
-            <button id="startStop" onclick="startStop()">START</button>
-            <button id="startStop" onclick="reset()">STOP</button>
-        </div>
-
-    </div>
-
+          <section>
+              <div class="overlay"></div>
+          </section>
+      </main>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -60,10 +147,10 @@
     <!-- include firebase database -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
+    https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
     <script src="leaderboard.js"></script>
     <script src="np_challenge.js"></script>
-  
   </body>
-</html>
+  
+  </html>
