--- a/scoreboard.html
+++ b/scoreboard.html
@@ -13,7 +13,7 @@
   crossorigin="anonymous">
  <link rel="stylesheet" href="teststyle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+  <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 
   <style> 
 
@@ -23,42 +23,124 @@
 </head>
 
 <body>
+  <header>
+      <div class="container">
+          <input type="checkbox" name="" id="check">
+          
+          <div class="logo-container">
+              <h3 class="logo">GO<span>Sweet</span></h3>
+          </div>
 
-<div id="first"></div>
-<div id="second"></div>
-<div id="third"></div>
-<div id="forth"></div>
-<div id="fifth"></div>
+          <div class="nav-btn">
+              <div class="nav-links">
+                  <ul>
+                      <li class="nav-link" style="--i: .6s">
+                          <a href="index.html">Home</a>
+                          <div class="dropdown">
+                              <ul>
+                                  <li class="dropdown-link">
+                                      <a href="settings.html">Settings</a>
+                                  </li>
+                                  <li class="dropdown-link">
+                                      <a href="leaderboard.html">Leaderboard</a>
+                                  </li>
+                                  <div class="arrow"></div>
+                              </ul>
+                          </div>
+                      </li>
+                      <li class="nav-link" style="--i: .85s">
+                          <a href="#">Bubble Tea<i class="fas fa-caret-down"></i></a>
+                          <div class="dropdown">
+                              <ul>
+                                  <li class="dropdown-link">
+                                      <a href="bubbletea.html">all</a>
+                                  </li>
+                                  <li class="dropdown-link">
+                                      <a href="#">brands</a>
+                                  </li>
+                                  <li class="dropdown-link">
+                                      <a href="#">near me</a>
+                                  </li>
+                                  <div class="arrow"></div>
+                              </ul>
+                          </div>
+                      </li>
+                      <li class="nav-link" style="--i: 1.1s">
+                          <a href="message.html">SWEET TEA<i class="fas fa-caret-down"></i></a>
+                      
+                      </li>
+                      <li class="nav-link" style="--i: 1.35s">
+                          <a href="#">SWEETVENTURE<i class="fas fa-caret-down"></i></a>
+                          <div class="dropdown">
+                              <ul>
+                                  <li class="dropdown-link">
+                                      <a href="np_challenge.html">TEAM NGEE ANN</a>
+                                  </li>
+                                  <li class="dropdown-link">
+                                      <a href="#">TEAM SP</a>
+                                  </li>
+                                  <li class="dropdown-link">
+                                      <a href="#">TEAM BUKIT PANJANG</a>
+                                  </li>
+                                  <div class="arrow"></div>
+                              </ul>
+                          </div>
+                      </li>
+                      <li class="nav-link" style="--i: 1.6s">
+                          <a href="scoreboard.html">LEADER-BOARD<i class="fas fa-caret-down"></i></a>
+                      </li>
+                  </ul>
+              </div>
 
+              <div class="log-sign" style="--i: 1.8s">
+                  <a href="login.html" class="btn transparent">Log in</a>
+              </div>
+          </div>
 
+          <div class="hamburger-menu-container">
+              <div class="hamburger-menu">
+                  <div></div>
+              </div>
+          </div>
+      </div>
+  </header>
+  <main>
+    <div id="first"></div>
+    <div id="second"></div>
+    <div id="third"></div>
+    <div id="forth"></div>
+    <div id="fifth"></div>
+      <section>
+          <div class="overlay"></div>
+      </section>
+  </main>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
 
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+  <!-- include firebase firestore -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
 
-<!-- include firebase firestore -->
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+  <!-- include firebase database -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
 
-<!-- include firebase database -->
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
-
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-</script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
-crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" 
-integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" 
-crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" 
-integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" 
-crossorigin="anonymous">
-</script>
-<script src="scoreboard.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
+  crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" 
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" 
+  crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" 
+  integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" 
+  crossorigin="anonymous">
+  </script>
+  <script src="scoreboard.js"></script>
 </body>
 
 </html>
