--- a/scoreboard.html
+++ b/scoreboard.html
@@ -12,6 +12,7 @@
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
   crossorigin="anonymous">
  <link rel="stylesheet" href="teststyle.css">
+ <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 
@@ -32,70 +33,53 @@
           </div>
 
           <div class="nav-btn">
-              <div class="nav-links">
-                  <ul>
-                      <li class="nav-link" style="--i: .6s">
-                          <a href="index.html">Home</a>
-                          <div class="dropdown">
-                              <ul>
-                                  <li class="dropdown-link">
-                                      <a href="settings.html">Settings</a>
-                                  </li>
-                                  <li class="dropdown-link">
-                                      <a href="leaderboard.html">Leaderboard</a>
-                                  </li>
-                                  <div class="arrow"></div>
-                              </ul>
-                          </div>
-                      </li>
-                      <li class="nav-link" style="--i: .85s">
-                          <a href="#">Bubble Tea<i class="fas fa-caret-down"></i></a>
-                          <div class="dropdown">
-                              <ul>
-                                  <li class="dropdown-link">
-                                      <a href="bubbletea.html">all</a>
-                                  </li>
-                                  <li class="dropdown-link">
-                                      <a href="#">brands</a>
-                                  </li>
-                                  <li class="dropdown-link">
-                                      <a href="#">near me</a>
-                                  </li>
-                                  <div class="arrow"></div>
-                              </ul>
-                          </div>
-                      </li>
-                      <li class="nav-link" style="--i: 1.1s">
-                          <a href="message.html">SWEET TEA<i class="fas fa-caret-down"></i></a>
-                      
-                      </li>
-                      <li class="nav-link" style="--i: 1.35s">
-                          <a href="#">SWEETVENTURE<i class="fas fa-caret-down"></i></a>
-                          <div class="dropdown">
-                              <ul>
-                                  <li class="dropdown-link">
-                                      <a href="np_challenge.html">TEAM NGEE ANN</a>
-                                  </li>
-                                  <li class="dropdown-link">
-                                      <a href="#">TEAM SP</a>
-                                  </li>
-                                  <li class="dropdown-link">
-                                      <a href="#">TEAM BUKIT PANJANG</a>
-                                  </li>
-                                  <div class="arrow"></div>
-                              </ul>
-                          </div>
-                      </li>
-                      <li class="nav-link" style="--i: 1.6s">
-                          <a href="scoreboard.html">LEADER-BOARD<i class="fas fa-caret-down"></i></a>
-                      </li>
-                  </ul>
-              </div>
+            <div class="nav-links">
+                <ul>
+                    <li class="nav-link" style="--i: .6s">
+                        <a href="index.html">Home</a>
+                        <div class="dropdown">
+                            <ul>
+                                <li class="dropdown-link">
+                                    <a href="settings.html">Settings</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="leaderboard.html">Leaderboard</a>
+                                </li>
+                                <div class="arrow"></div>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-link" style="--i: .85s">
+                        <a href="message.html">SWEET TEA<i class="fas fa-caret-down"></i></a>
+                    
+                    </li>
+                    <li class="nav-link" style="--i: 1.1s">
+                        <a href="#">SWEETVENTURE<i class="fas fa-caret-down"></i></a>
+                        <div class="dropdown">
+                            <ul>
+                                <li class="dropdown-link">
+                                    <a href="np_challenge.html">TEAM NGEE ANN</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="#">TEAM SP</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="#">TEAM BUKIT PANJANG</a>
+                                </li>
+                                <div class="arrow"></div>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="scoreboard.html">LEADER-BOARD<i class="fas fa-caret-down"></i></a>
+                    </li>
+                </ul>
+            </div>
 
-              <div class="log-sign" style="--i: 1.8s">
-                  <a href="login.html" class="btn transparent">Log in</a>
-              </div>
-          </div>
+            <div class="log-sign" style="--i: 1.6s">
+                <a href="login.html" class="btn transparent">Log in</a>
+            </div>
+        </div>
 
           <div class="hamburger-menu-container">
               <div class="hamburger-menu">
@@ -104,12 +88,43 @@
           </div>
       </div>
   </header>
-  <main>
-    <div id="first"></div>
-    <div id="second"></div>
-    <div id="third"></div>
-    <div id="forth"></div>
-    <div id="fifth"></div>
+  <main>         
+    <table class="table table-hover">
+      <thead>
+        <tr class="titles">
+          <th>Rank</th>
+          <th>Player</th>
+          <th id="timing">Timing (min)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="first">
+          <td><strong><img src="png file/trophy.png"></strong></td>
+          <td><div id="firstName"></div></td>
+          <td><div id="first"></div></td>
+        </tr>
+        <tr class="second">
+          <td><img src="png file/2nd medal.png"></td>
+          <td><div id="secondName"></div></td>
+          <td><div id="second"></div></td>
+        </tr>
+        <tr class="third">
+          <td><img src="png file/3rd medal.png"></td>
+          <td><div id="thirdName"></div></td>
+          <td><div id="third"></div></td>
+        </tr>
+        <tr class="forth">
+          <td><img src="png file/4th medal.png"></td>
+          <td><div id="forthName"></div></td>
+          <td><div id="forth"></div></td>
+        </tr>
+          <tr class="fifth">
+          <td><img src="png file/5th medal.png"></td>
+          <td><div id="fifthName"></div></td>
+          <td><div id="fifth"></div></td>
+        </tr>
+      </tbody>
+    </table>
       <section>
           <div class="overlay"></div>
       </section>
